minor change to prevent overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,10 @@ p {
 
 /******MEDIA QUERIES********/
 @media only screen and (max-device-width: 481px) {
+  body {
+    overflow-y: hidden;
+  }
+
   p {
     font-size: 0.8rem;
     letter-spacing: unset;
